<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar" />
    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_home_100"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/homeImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/home"
                android:src="@drawable/home_selected_icon" />

            <TextView
                android:id="@+id/homeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/home"
                android:textColor="@color/home"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/likeLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/likeImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/like"
                android:src="@drawable/like_selected_icon" />

            <TextView
                android:id="@+id/likeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/like"
                android:textColor="@color/like"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/notificationImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/notification"
                android:src="@drawable/notification_selected_icon" />

            <TextView
                android:id="@+id/notificationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/notification"
                android:textColor="@color/notification"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_selected_icon" />

            <TextView
                android:id="@+id/profileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/profile"
                android:textColor="@color/profile"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>